--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,8 +4,8 @@
       <a class="navbar-brand" href="#">Recipe Book</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Recipes</a></li>
-      <li><a href="#">Shopping List</a></li>
+      <li><a href="#" (click) = "OnSelect('recipe')">Recipes</a></li>
+      <li><a href="#" (click) = "OnSelect('shoppingList')">Shopping List</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
