--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
- <a href="#" class="list-group clearfix" (click) = onSelected()> 
+ <a class="list-group clearfix" style="cursor:pointer;" (click) = onSelected()> 
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{recipe.name}}</h4>
         <p class="list-group-item-text">{{recipe.description}}</p>
