Intermediate commit: Routing

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,6 @@
- <a class="list-group clearfix" style="cursor:pointer;"> 
+ <div style="margin-top: 2px;">
+     <a class="list-group-item clearfix" style="cursor:pointer;"
+ [routerLink] = "[index]" routerLinkActive="active"> 
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{recipe.name}}</h4>
         <p class="list-group-item-text">{{recipe.description}}</p>
@@ -7,3 +9,4 @@
         <img [src] = "recipe.imagePath" alt="{{recipe.name}}" class="img-responsive" style="max-height: 50px;">
     </span>
 </a>
+</div>
